<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">É Gol!</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_search">Search for teams and places</string>
    <string name="games_search">Search:</string>
    <string name="title_activity_game">É Gol! - Game</string>
    <string name="comment_button">Post a comment</string>
    <string name="map_button">Check map</string>
    <string name="directions_button">Get directions</string>
    <string name="facebook_button">Facebook</string>
    <string name="twitter_button">Twitter</string>
    <string name="gplus_button">Google +</string>
    <string name="title_activity_check_map">É Gol! - Map</string>
    <string name="title_activity_directions_map">É Gol! - Directions</string>
    <string name="hello_world">Hello world!</string>

</resources>